- NEW: TortoiseUDiff accepts input from a pipe. It can be used now
       like this:
       $ svn diff | TortoiseUDiff.exe -p
- NEW: TortoiseMerge can jump to the next/prev inline diff. (Stefan)
- NEW: Adjusting externals to a fixed revision when 
       branching/tagging. (Stefan)
- NEW: Filter matches in the log dialog are highlighted. (Stefan)
- BUG: Merged revisions must be counted only 
       once in stats (Stefan Fuhrmann)
- BUG: Relative Webviewer urls didn't work from the 
       repository browser. (Stefan)

Version 1.6.9
- BUG: the menu icons on XP were not shown correctly. (Stefan)
- BUG: the overlay icons could dissapear after upgrading from
       a previous version, a 'repair install' however would
       fix this issue. (Stefan)
- BUG: Urls with '#' in it were not escaped correctly. (Stefan)
- BUG: Ignoring directories with a dot and extension in the name
       didn't work. (Stefan)
- BUG: Comparing an updated item in the update-progress dialog
       didn't work properly for items in an external 
       directory. (Stefan)

Version 1.6.8
- BUG: Exporting via DnD from the repository browser could 
       create garbled paths if the urls of the files 
       required escaping. (Stefan)
- BUG: Properties loaded from a file were not changed or
       added without a manual edit of the loaded content. (Stefan)
- BUG: The /logmsg param wasn't used in the copy command. (Stefan)
- BUG: The /logmsg param wasn't used in the import command. (Stefan)
- BUG: The commonUrl and commonRoot parameters in the
       CheckCommit method of the IBugtraqProvider2 interface
       could return wrong paths/urls. (Stefan)
- BUG: Updating two items from different paths to get a sparse
       checkout didn't work. (Stefan)
- BUG: Handling of multi-page TIFF files in TortoiseIDiff could
       lead to a crash. (Stefan)
- BUG: When adding files failed, the error message was
       not shown. (Stefan)
- BUG: The return value for /command:commit was wrong. (Stefan Fuhrmann)